--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,16 @@ body {
   background: #2e2f42;
 }
 
+.footer-logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+}
+
 .footer-text {
   font-weight: 400;
   font-size: 16px;
